@@ -1,0 +1,15 @@
+// Copyright 2002-2011, University of Colorado
+package edu.colorado.phet.fluidpressureandflow.common.view;
+
+import edu.umd.cs.piccolo.PNode;
+
+/**
+ * Tool box node that contains the velocity and pressure sensor nodes
+ *
+ * @author Sam Reid
+ */
+public class SensorToolBoxNode extends FluidPressureAndFlowControlPanelNode {
+    public SensorToolBoxNode( final PNode content ) {
+        super( content );
+    }
+}
